--- a/BST.tex
+++ b/BST.tex
@@ -36,14 +36,14 @@
 \newcommand{\NULL}{\mbox{$\bot$}}
 \newcommand{\clean}{\mbox{\sc Clean}}
 \newcommand{\mk}{\mbox{\sc Mark}}
-\newcommand{\insertflag}{\mbox{\sc InsertFlag}}
-\newcommand{\deleteflag}{\mbox{\sc DeleteFlag}}
+\newcommand{\insertflag}{\mbox{I\Flag}}
+\newcommand{\deleteflag}{\mbox{D\Flag}}
 \newcommand{\record}{\mbox{record}}
 \newcommand{\info}{\mbox{info}}
 
 \newcommand{\Flag}{Flag}
-\newcommand{\DFlag}{D\Flag}
-\newcommand{\IFlag}{I\Flag}
+\newcommand{\DFlag}{DInfo}
+\newcommand{\IFlag}{IInfo}
 
 \newcommand{\ie}{{\it i.e.}}
 \newcommand{\TRUE}{\mbox{\sc True}}
