--- a/recoverable-data-structures.tex
+++ b/recoverable-data-structures.tex
@@ -10,6 +10,7 @@
 \usepackage{enumerate}
 \usepackage{paralist}
 \usepackage{fullpage}
+\usepackage{xcolor}
 \usepackage{smartref} % for referencing the line numbers
 
 % theorem styles
